@@ -21,6 +21,21 @@
 #
 # This script is executed by /etc/init.d/ec2-run-user-data, and output is
 # logged to /var/log/messages.
+#
+# This script will set up a Hadoop/HBase cluster.  Zookeeper is
+# installed and launched on the namenode/jobtracker/master node.  This is a 
+# configuration that is suitable for small clusters or for testing, but not for
+# most production environments.
+#
+# Since the regionservers all need the private dns name of the zookeeper
+# machine, that machine must be started before the regionservers.  By default, 
+# a zookeeper is running on the same machine as the master, so you will need to
+# first launch the master node, then the slaves:
+#
+#   stratus exec my-cluster launch-master
+#   stratus exec my-cluster launch-slaves 10
+#
+# 
 ################################################################################
 
 ################################################################################
@@ -31,27 +46,61 @@
 export %ENV%
 
 echo "export %ENV%" >> ~root/.bash_profile
+#for some reason, the .bash_profile in some distros does not source .bashrc
+cat >> ~root/.bash_profile <<EOF
+if [ -f ~/.bashrc ]; then
+   source ~/.bashrc
+fi
+EOF
 echo "export %ENV%" >> ~root/.bashrc
 
-HADOOP_VERSION=${HADOOP_VERSION:-0.20.2+737}
+# up ulimits if necessary
+if [ `ulimit -n` -lt 128000 ]; then 
+	ulimit -n 128000
+fi
+
+HADOOP_VERSION=${HADOOP_VERSION:-0.20.2-cdh3u0}
 HADOOP_HOME=/usr/local/hadoop-$HADOOP_VERSION
 HADOOP_CONF_DIR=$HADOOP_HOME/conf
 
-PIG_VERSION=${PIG_VERSION:-0.7.0}
+HBASE_VERSION=${HBASE_VERSION:-0.90.1-cdh3u0}
+HBASE_HOME=/usr/local/hbase-$HBASE_VERSION
+HBASE_CONF_DIR=$HBASE_HOME/conf
+
+ZK_VERSION=${ZK_VERSION:-3.3.3-cdh3u0}
+ZK_HOME=/usr/local/zookeeper-$ZK_VERSION
+ZK_CONF_DIR=$ZK_HOME/conf
+
+PIG_VERSION=${PIG_VERSION:-pig-0.8.0-cdh3u0}
 PIG_HOME=/usr/local/pig-$PIG_VERSION
 PIG_CONF_DIR=$PIG_HOME/conf
+
+#HDFS settings to support HBase
+DFS_DATANODE_HANDLER_COUNT=10
+DFS_DATANODE_MAX_XCIEVERS=10000
+#end of HDFS settings
 
 SELF_HOST=`wget -q -O - http://169.254.169.254/latest/meta-data/public-hostname`
 for role in $(echo "$ROLES" | tr "," "\n"); do
   case $role in
   nn)
     NN_HOST=$SELF_HOST
+    # By default the HBase master and Zookeeper run on the Namenode host
+    # Zookeeper uses the private IP address of the namenode
+    ZOOKEEPER_QUORUM=`echo $HOSTNAME`
     ;;
   jt)
     JT_HOST=$SELF_HOST
     ;;
   esac
 done
+
+# Set up the macro that we will use to execute commands as "hadoop"
+if which dpkg &> /dev/null; then
+  AS_HADOOP="su -s /bin/bash - hadoop -c"
+elif which rpm &> /dev/null; then
+  AS_HADOOP="/sbin/runuser -s /bin/bash - hadoop -c"
+fi
 
 function register_auto_shutdown() {
   if [ ! -z "$AUTO_SHUTDOWN" ]; then
@@ -79,11 +128,11 @@ function install_user_packages() {
 }
 
 function install_yourkit() {
-	mkdir /mnt/yjp
-	YOURKIT_URL="http://www.yourkit.com/download/yjp-9.0.7-linux.tar.bz2"
-	curl="curl --retry 3 --silent --show-error --fail"
-	$curl -O $YOURKIT_URL
-	yourkit_tar_file=`basename $YOURKIT_URL`
+    mkdir /mnt/yjp
+    YOURKIT_URL="http://www.yourkit.com/download/yjp-9.0.7-linux.tar.bz2"
+    curl="curl --retry 3 --silent --show-error --fail"
+    $curl -O $YOURKIT_URL
+    yourkit_tar_file=`basename $YOURKIT_URL`
     tar xjf $yourkit_tar_file -C /mnt/yjp
     rm -f $yourkit_tar_file
     chown -R hadoop /mnt/yjp
@@ -91,8 +140,16 @@ function install_yourkit() {
 }
 
 function install_hadoop() {
-  useradd hadoop
+  #The EBS volumes are already set up with hadoop:hadoop equal to 500:500
+  if which dpkg &> /dev/null; then
+    addgroup hadoop --gid 500
+    adduser --disabled-login --ingroup hadoop --gecos GECOS --uid 500 hadoop
+  else
+     groupadd hadoop -g 500
+     useradd hadoop -u 500 -g 500
+  fi
 
+  
   hadoop_tar_url=http://archive.cloudera.com/cdh/3/hadoop-$HADOOP_VERSION.tar.gz
   hadoop_tar_file=`basename $hadoop_tar_url`
 
@@ -105,15 +162,62 @@ function install_hadoop() {
   fi
 
   tar zxf $hadoop_tar_file -C /usr/local
+  cp $HADOOP_HOME/contrib/fairscheduler/hadoop-*-fairscheduler.jar $HADOOP_HOME/lib
   rm -f $hadoop_tar_file $hadoop_tar_md5_file
 
   echo "export HADOOP_HOME=$HADOOP_HOME" >> ~root/.bashrc
   echo 'export PATH=$JAVA_HOME/bin:$HADOOP_HOME/bin:$PATH' >> ~root/.bashrc
+  
+  #set up the native compression libraries
+  if [ `arch` == 'x86_64' ]; then
+    cp $HADOOP_HOME/lib/native/Linux-amd64-64/libhadoop.* /usr/lib/
+  else
+    cp $HADOOP_HOME/lib/native/ Linux-i386-32/libhadoop.* /usr/lib/
+  fi
+  ldconfig -n /usr/lib/
+}
+
+function install_hbase() {
+  hbase_tar_url=http://archive.cloudera.com/cdh/3/hbase-$HBASE_VERSION.tar.gz
+  hbase_tar_file=`basename $hbase_tar_url`
+
+  curl="curl --retry 3 --silent --show-error --fail"
+  $curl -O $hbase_tar_url
+
+  if [ ! -e $hbase_tar_file ]; then
+    echo "Failed to download $hbase_tar_url. Aborting."
+    exit 1
+  fi
+
+  tar zxf $hbase_tar_file -C /usr/local
+  rm -f $hbase_tar_file $hbase_tar_md5_file
+
+  echo "export HBASE_HOME=$HBASE_HOME" >> ~root/.bashrc
+  echo 'export PATH=$JAVA_HOME/bin:$HBASE_HOME/bin:$PATH' >> ~root/.bashrc
+}
+
+function install_zookeeper() {
+  zk_tar_url=http://archive.cloudera.com/cdh/3/zookeeper-$ZK_VERSION.tar.gz
+  zk_tar_file=`basename $zk_tar_url`
+
+  curl="curl --retry 3 --silent --show-error --fail"
+  $curl -O $zk_tar_url
+
+  if [ ! -e $zk_tar_file ]; then
+    echo "Failed to download $zk_tar_url. Aborting."
+    exit 1
+  fi
+
+  tar zxf $zk_tar_file -C /usr/local
+  rm -f $zk_tar_file $zk_tar_md5_file
+
+  echo "export ZOOKEEPER_HOME=$ZK_HOME" >> ~root/.bashrc
+  echo 'export PATH=$JAVA_HOME/bin:$ZK_HOME/bin:$PATH' >> ~root/.bashrc
 }
 
 function install_pig()
 {
-  pig_tar_url=http://mirror.cloudera.com/apache/hadoop/pig/pig-$PIG_VERSION/pig-$PIG_VERSION.tar.gz
+  pig_tar_url=http://archive.cloudera.com/cdh/3/$PIG_VERSION.tar.gz
   pig_tar_file=`basename $pig_tar_url`
 
   curl="curl --retry 3 --silent --show-error --fail"
@@ -185,6 +289,12 @@ function make_hadoop_dirs {
 
 # Configure Hadoop by setting up disks and site file
 function configure_hadoop() {
+    #set up hadoop's env. to have the same path and vars as root
+    #this ensures that commands work correctly when the user su's to hadoop
+    cp ~/.bash_profile /home/hadoop/
+    cp ~/.bashrc /home/hadoop/
+    chown hadoop /home/hadoop/.bash*
+    chgrp hadoop /home/hadoop/.bash*
 
   install_packages xfsprogs # needed for XFS
 
@@ -215,6 +325,11 @@ function configure_hadoop() {
     DFS_REPLICATION=3 # EBS is internally replicated, but we also use HDFS replication for safety
   else
     case $INSTANCE_TYPE in
+    m2.2xlarge)
+      DFS_NAME_DIR=/mnt/hadoop/hdfs/name
+      FS_CHECKPOINT_DIR=/mnt/hadoop/hdfs/secondary
+      DFS_DATA_DIR=/mnt/hadoop/hdfs/data
+      ;;
     m1.xlarge|c1.xlarge)
       DFS_NAME_DIR=/mnt/hadoop/hdfs/name,/mnt2/hadoop/hdfs/name
       FS_CHECKPOINT_DIR=/mnt/hadoop/hdfs/secondary,/mnt2/hadoop/hdfs/secondary
@@ -237,6 +352,15 @@ function configure_hadoop() {
   fi
 
   case $INSTANCE_TYPE in
+  m2.2xlarge)
+    MAPRED_LOCAL_DIR=/mnt/hadoop/mapred/local
+    MAX_MAP_TASKS=5
+    MAX_REDUCE_TASKS=3
+    CHILD_OPTS=-Xmx2000m
+    CHILD_ULIMIT=4000000
+    IO_SORT_FACTOR=25
+    IO_SORT_MB=250
+    ;;
   m1.xlarge|c1.xlarge)
     prep_disk /mnt2 /dev/sdc true &
     disk2_pid=$!
@@ -250,6 +374,8 @@ function configure_hadoop() {
     MAX_REDUCE_TASKS=2
     CHILD_OPTS=-Xmx2000m
     CHILD_ULIMIT=4000000
+    IO_SORT_FACTOR=20
+    IO_SORT_MB=200
     ;;
   m1.large)
     prep_disk /mnt2 /dev/sdc true
@@ -258,6 +384,8 @@ function configure_hadoop() {
     MAX_REDUCE_TASKS=1
     CHILD_OPTS=-Xmx2000m
     CHILD_ULIMIT=4000000
+    IO_SORT_FACTOR=10
+    IO_SORT_MB=100
     ;;
   c1.medium)
     MAPRED_LOCAL_DIR=/mnt/hadoop/mapred/local
@@ -265,6 +393,8 @@ function configure_hadoop() {
     MAX_REDUCE_TASKS=2
     CHILD_OPTS=-Xmx550m
     CHILD_ULIMIT=1126400
+    IO_SORT_FACTOR=10
+    IO_SORT_MB=100
     ;;
   *)
     # "m1.small"
@@ -273,6 +403,8 @@ function configure_hadoop() {
     MAX_REDUCE_TASKS=1
     CHILD_OPTS=-Xmx550m
     CHILD_ULIMIT=1126400
+    IO_SORT_FACTOR=10
+    IO_SORT_MB=100
     ;;
   esac
 
@@ -309,7 +441,7 @@ function configure_hadoop() {
 </property>
 <property>
   <name>dfs.datanode.handler.count</name>
-  <value>3</value>
+  <value>$DFS_DATANODE_HANDLER_COUNT</value>
   <final>true</final>
 </property>
 <!--property>
@@ -334,7 +466,7 @@ function configure_hadoop() {
 </property>
 <property>
   <name>dfs.namenode.handler.count</name>
-  <value>5</value>
+  <value>64</value>
   <final>true</final>
 </property>
 <property>
@@ -345,6 +477,10 @@ function configure_hadoop() {
 <property>
   <name>dfs.replication</name>
   <value>$DFS_REPLICATION</value>
+</property>
+<property>
+ <name>dfs.datanode.max.xcievers</name>
+ <value>$DFS_DATANODE_MAX_XCIEVERS</value>
 </property>
 <property>
   <name>fs.checkpoint.dir</name>
@@ -370,6 +506,14 @@ function configure_hadoop() {
   <value>65536</value>
 </property>
 <property>
+  <name>io.sort.factor</name>
+  <value>$IO_SORT_FACTOR</value>
+</property>
+<property>
+  <name>io.sort.mb</name>
+  <value>$IO_SORT_MB</value>
+</property>
+<property>
   <name>mapred.child.java.opts</name>
   <value>$CHILD_OPTS</value>
 </property>
@@ -384,7 +528,7 @@ function configure_hadoop() {
 </property>
 <property>
   <name>mapred.job.tracker.handler.count</name>
-  <value>5</value>
+  <value>64</value>
   <final>true</final>
 </property>
 <property>
@@ -428,8 +572,12 @@ function configure_hadoop() {
 </property>
 <property>
   <name>tasktracker.http.threads</name>
-  <value>46</value>
+  <value>40</value>
   <final>true</final>
+</property>
+<property>
+  <name>mapred.output.compress</name>
+  <value>true</value>
 </property>
 <property>
   <name>mapred.compress.map.output</name>
@@ -458,22 +606,6 @@ function configure_hadoop() {
   <name>io.compression.codecs</name>
   <value>org.apache.hadoop.io.compress.DefaultCodec,org.apache.hadoop.io.compress.GzipCodec</value>
 </property>
-<property>
-  <name>fs.s3.awsAccessKeyId</name>
-  <value>$AWS_ACCESS_KEY_ID</value>
-</property>
-<property>
-  <name>fs.s3.awsSecretAccessKey</name>
-  <value>$AWS_SECRET_ACCESS_KEY</value>
-</property>
-<property>
-  <name>fs.s3n.awsAccessKeyId</name>
-  <value>$AWS_ACCESS_KEY_ID</value>
-</property>
-<property>
-  <name>fs.s3n.awsSecretAccessKey</name>
-  <value>$AWS_SECRET_ACCESS_KEY</value>
-</property>
 </configuration>
 EOF
 
@@ -490,12 +622,84 @@ EOF
   # Hadoop logs should be on the /mnt partition
   sed -i -e 's|# export HADOOP_LOG_DIR=.*|export HADOOP_LOG_DIR=/var/log/hadoop/logs|' \
     $HADOOP_CONF_DIR/hadoop-env.sh
+    
   rm -rf /var/log/hadoop
   mkdir /mnt/hadoop/logs
   chown hadoop:hadoop /mnt/hadoop/logs
   ln -s /mnt/hadoop/logs /var/log/hadoop
   chown -R hadoop:hadoop /var/log/hadoop
 
+}
+
+# Sets up the HBase configuration
+function configure_hbase() {
+	
+  ##############################################################################
+  # Modify this section to customize your HBase cluster.
+  ##############################################################################
+
+  HBASE_TMP_DIR=/mnt/hbase
+  mkdir $HBASE_TMP_DIR
+  chown hadoop:hadoop $HBASE_TMP_DIR
+  
+  ZOOKEEPER_DATA_DIR=/mnt/hbase/zk
+  mkdir $ZOOKEEPER_DATA_DIR
+  chown hadoop:hadoop $ZOOKEEPER_DATA_DIR
+  
+  cat > $HBASE_CONF_DIR/hbase-site.xml <<EOF
+<?xml version="1.0"?>
+<?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
+<configuration>
+<property>
+ <name>hbase.rootdir</name>
+ <value>hdfs://$NN_HOST:8020/hbase</value>
+</property>
+<property>
+ <name>hbase.cluster.distributed</name>
+ <value>true</value>
+</property>
+<property>
+ <name>hbase.regionserver.handler.count</name>
+ <value>200</value>
+</property>
+<property>
+ <name>hbase.tmp.dir</name>
+ <value>$HBASE_TMP_DIR</value>
+</property>
+<property>
+ <name>dfs.replication</name>
+ <value>$DFS_REPLICATION</value>
+</property>
+<!-- zookeeper properties -->
+<property>
+ <name>hbase.zookeeper.quorum</name>
+ <value>$ZOOKEEPER_QUORUM</value>
+</property>
+<property>
+ <name>zookeeper.session.timeout</name>
+ <value>60000</value>
+</property>
+<property>
+  <name>hbase.zookeeper.property.dataDir</name>
+  <value>$ZOOKEEPER_DATA_DIR</value>
+</property>
+<property>
+  <name>hbase.zookeeper.property.maxClientCnxns</name>
+  <value>100</value>
+</property>
+</configuration>
+EOF
+
+  # Override JVM options - use 2G heap for master and 8G for region servers
+  cat >> $HBASE_CONF_DIR/hbase-env.sh <<EOF
+export HBASE_MASTER_OPTS="-Xms2048m -Xmx2048m -Xmn256m -XX:+UseConcMarkSweepGC -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/mnt/hbase/logs/hbase-master-gc.log"
+export HBASE_REGIONSERVER_OPTS="-Xms8g -Xmx12g -Xmn256m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:ParallelGCThreads=8 -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/mnt/hbase/logs/hbase-regionserver-gc.log"
+HBASE_LOG_DIR=${HBASE_TMP_DIR}/logs
+EOF
+
+  mkdir /etc/hbase/
+  ln -s $HBASE_CONF_DIR /etc/hbase/conf
+  ln -s $HBASE_LOG_DIR /var/log/hbase
 }
 
 # Sets up small website on cluster.
@@ -537,18 +741,13 @@ END
 }
 
 function start_namenode() {
-  if which dpkg &> /dev/null; then
-    AS_HADOOP="su -s /bin/bash - hadoop -c"
-  elif which rpm &> /dev/null; then
-    AS_HADOOP="/sbin/runuser -s /bin/bash - hadoop -c"
-  fi
 
   # Format HDFS
   [ ! -e $FIRST_MOUNT/hadoop/hdfs ] && $AS_HADOOP "$HADOOP_HOME/bin/hadoop namenode -format"
 
   $AS_HADOOP "$HADOOP_HOME/bin/hadoop-daemon.sh start namenode"
 
-  $AS_HADOOP "$HADOOP_HOME/bin/hadoop dfsadmin -safemode wait"
+  #$AS_HADOOP "$HADOOP_HOME/bin/hadoop dfsadmin -safemode wait"
   $AS_HADOOP "$HADOOP_HOME/bin/hadoop fs -mkdir /user"
   # The following is questionable, as it allows a user to delete another user
   # It's needed to allow users to create their own user directories
@@ -557,18 +756,30 @@ function start_namenode() {
 }
 
 function start_daemon() {
-  if which dpkg &> /dev/null; then
-    AS_HADOOP="su -s /bin/bash - hadoop -c"
-  elif which rpm &> /dev/null; then
-    AS_HADOOP="/sbin/runuser -s /bin/bash - hadoop -c"
-  fi
   $AS_HADOOP "$HADOOP_HOME/bin/hadoop-daemon.sh start $1"
+}
+
+# Launch the Zookeeper and the HBase master node - these must be started
+# before adding region servers
+function start_master() {
+   #Start the zookeeper process first
+   $AS_HADOOP "$HBASE_HOME/bin/hbase-daemon.sh start zookeeper"
+   #Then start the master
+   $AS_HADOOP "$HBASE_HOME/bin/hbase-daemon.sh start master"
+}
+
+# Launch a region server
+function start_region() {
+   $AS_HADOOP "$HBASE_HOME/bin/hbase-daemon.sh start regionserver"
 }
 
 register_auto_shutdown
 install_user_packages
 install_hadoop
+install_hbase
+install_zookeeper
 configure_hadoop
+configure_hbase
 install_pig
 
 for role in $(echo "$ROLES" | tr "," "\n"); do
@@ -576,6 +787,7 @@ for role in $(echo "$ROLES" | tr "," "\n"); do
   nn)
     setup_web
     start_namenode
+    start_master
     ;;
   snn)
     start_daemon secondarynamenode
@@ -585,6 +797,7 @@ for role in $(echo "$ROLES" | tr "," "\n"); do
     ;;
   dn)
     start_daemon datanode
+    start_region
     ;;
   tt)
     start_daemon tasktracker
